--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
     <!-- Hero Section - Home Page -->
     <section id="hero" class="hero">
 
-      <!-- <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in"> -->
+      <!-- THIS IS THE MAIN BACKGROUND IMAGE -->
+      <img src="assets/img/Hero-HugeSurf-BG.jpg" alt="" data-aos="fade-in">
 
       <div class="container">
         <div class="row">
